templates/ticketmonster-db.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
  labels:
    app: ticketmonster-db
  name: ticketmonster-db
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: ticketmonster-db
    deploymentconfig: ticketmonster-db
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        app: ticketmonster-db
        deploymentconfig: ticketmonster-db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: ticketmonster
            - name: MYSQL_PASSWORD
              value: monster
            - name: MYSQL_USER
              value: ticket
          image: >-
            mysql:5.5
          imagePullPolicy: IfNotPresent
          name: ticketmonster-db
          ports:
            - containerPort: 3306
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/lib/mysql/data
              name: ticketmonster-db-volume-1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir: {}
          name: ticketmonster-db-volume-1
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - ticketmonster-db
        from:
          kind: ImageStreamTag
          name: 'mysql:5.5'
          namespace: openshift
      type: ImageChange
